feat: auction history map struct 구현 및 적용